--- a/projects/index.qmd
+++ b/projects/index.qmd
@@ -5,7 +5,7 @@ listing:
   sort: "date desc"
   type: default
   categories: true
-  image-height: 120
 ---
 
-Sélection de projets. Chaque fiche détaille : **problème**, **approche**, **résultats**, **stack**, **code** (extraits) et **liens**.
+Sélection de projets.
+Chaque fiche détaille : **problème**, **approche**, **résultats**, **stack**, **code** (extraits) et **liens**.
